--- a/DingerLab/pom.xml
+++ b/DingerLab/pom.xml
@@ -126,15 +126,15 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.shared</groupId>
-						<artifactId>maven-filtering</artifactId>
-						<version>1.3</version>
-					</dependency>
-				</dependencies>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<path>/dingerlab</path>
+					<username>wooseok01</username>
+					<password>Ss5327128!</password>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
