--- a/DingerLab/pom.xml
+++ b/DingerLab/pom.xml
@@ -108,6 +108,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-resources-plugin</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+
 		<!-- FE 라이브러리 설정 -->
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
