1. dingerlab 데이터베이스 생성 2. mybatis 연동(character 페이지) 3. css 수정(character 페이지)

--- a/DingerLab/src/main/resources/application.properties
+++ b/DingerLab/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #database settings
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=true&useUnicode=yes&characterEncoding=utf-8&AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:mysql://localhost:3306/DingerLab?useSSL=true&useUnicode=yes&characterEncoding=utf-8&AUTO_SERVER=TRUE
 spring.datasource.username=wooseok01
 spring.datasource.password=Ss5327128!
 
 #mybatis settings
 mybatis.config-location=mybatis-config.xml
+mybatis.type-aliases-package=com.kr.dingerlab.model
 
 #view-resolver
 spring.mvc.view.prefix=/WEB-INF/jsp/
