change database properties

--- a/DingerLab/src/main/resources/application.properties
+++ b/DingerLab/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #database settings
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/DingerLab?useSSL=true&useUnicode=yes&characterEncoding=utf-8&AUTO_SERVER=TRUE
-spring.datasource.username=wooseok01
-spring.datasource.password=Ss5327128!
+spring.datasource.username=dingerlab
+spring.datasource.password=Trashcor12*di
 
 #mybatis settings
 mybatis.config-location=mybatis-config.xml
