--- a/DingerLab/pom.xml
+++ b/DingerLab/pom.xml
@@ -123,7 +123,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>ROOT.war</finalName>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
